Update the script

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,7 @@ jobs:
         run: sed -i 's/<base href="\/" \/>/<base href="\/hengyili.github.io\/" \/>/g' release/wwwroot/index.html
       - name: Add .nojekyll file
         run: touch release/wwwroot/.nojekyll
+      - name: Add .nojekyll file to root
+        run: touch release/.nojekyll
       - name: copy index.html to 404.html
         run: cp release/wwwroot/index.html release/wwwroot/404.html
